[gd_scene load_steps=7 format=3 uid="uid://cirfpuxgijlwp"]

[ext_resource type="Script" uid="uid://ra2gpxjg15vc" path="res://scripts/game_level.gd" id="1_2i5ty"]
[ext_resource type="Texture2D" uid="uid://c32wdojp55x2i" path="res://objects/keylistener.png" id="2_2i5ty"]
[ext_resource type="Script" uid="uid://dh022hdm80570" path="res://objects/key_listener.gd" id="2_d65c1"]
[ext_resource type="Script" uid="uid://be512qqenckd2" path="res://objects/judgement.gd" id="5_2i5ty"]
[ext_resource type="Texture2D" uid="uid://5dcukvlp0afe" path="res://art/stage_background.png" id="6_smvv8"]
[ext_resource type="PackedScene" uid="uid://dk8v10241c0qd" path="res://objects/falling_key_spawner.tscn" id="6_wtvao"]

[node name="GameLevel" type="Node2D"]
script = ExtResource("1_2i5ty")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Keylistener" type="Sprite2D" parent="."]
position = Vector2(-210, 469)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_2i5ty")
script = ExtResource("2_d65c1")

[node name="Keylistener2" type="Sprite2D" parent="."]
position = Vector2(-75, 469)
rotation = -1.5708
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_2i5ty")
script = ExtResource("2_d65c1")
lane_index = 1

[node name="Keylistener3" type="Sprite2D" parent="."]
position = Vector2(75, 469)
rotation = 1.5708
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_2i5ty")
script = ExtResource("2_d65c1")
lane_index = 2

[node name="Keylistener4" type="Sprite2D" parent="."]
position = Vector2(210, 479)
rotation = 3.14159
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_2i5ty")
script = ExtResource("2_d65c1")
lane_index = 3

[node name="Judgement" type="Sprite2D" parent="."]
position = Vector2(0, 0.0010376)
scale = Vector2(0.999999, 0.999999)
script = ExtResource("5_2i5ty")
key_listener_paths = Array[NodePath]([NodePath("../Keylistener"), NodePath("../Keylistener2"), NodePath("../Keylistener3"), NodePath("../Keylistener4")])

[node name="Timer" type="Timer" parent="Judgement"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="JudgementLabel" type="Label" parent="Judgement"]
z_index = 999
anchors_preset = -1
anchor_left = -505.0
anchor_top = 0.00109863
anchor_bottom = 325.001
offset_left = 142.0
offset_top = -251.002
offset_right = 363.0
offset_bottom = -114.002
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AccuracyLabel" type="Label" parent="Judgement"]
anchors_preset = -1
anchor_left = 2.99933
anchor_top = -200.716
anchor_right = 506.666
anchor_bottom = 0.00158691
offset_left = 695.001
offset_top = -327.284
offset_right = 444.334
offset_bottom = -391.002
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 75
text = "100%"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ComboLabel" type="Label" parent="Judgement"]
offset_left = -906.0
offset_top = 389.0
offset_right = -651.0
offset_bottom = 504.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 100
vertical_alignment = 2

[node name="falling_key_spawner" parent="." instance=ExtResource("6_wtvao")]
key_listener_paths = Array[NodePath]([NodePath("../Keylistener"), NodePath("../Keylistener2"), NodePath("../Keylistener3"), NodePath("../Keylistener4")])

[node name="StageBackground" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)
self_modulate = Color(1, 1, 1, 0.784314)
z_index = -999
scale = Vector2(2.5, 4.542)
texture = ExtResource("6_smvv8")
